src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  box-sizing: border-box;
}

:root {
  --cyan: #588b8bff;
  --apricot: #ffd5c2ff;
  --gold: #f28f3bff;
  --red: #c8553dff;
  --jet: #363537;
  --cream: #FDF6F4;
  color-scheme: light dark;
  background-color: var(--cyan);
  color: var(--cream);

  font-family: 'Raleway Variable', system-ui, Helvetica, Arial, sans-serif;
  font-weight: 400;
  text-align: center;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

body {
  margin: 0 auto;
  width: 100vw;
  height: 100vh;
}

a {
  color: var(--jet);
  text-decoration: none;
  cursor: pointer;
}

a:hover {
  color: var(--gold);
  text-decoration: underline;
}

button {
  border: 1px solid transparent;
  transition: border-color 0.25s;
  cursor: pointer;
}

button:hover {
  border-color: var(--apricot);
}

button:focus,
button:focus-visible {
  outline: 4px auto var(--apricot);
  background-color: rgba(41, 39, 39, 0.191);

}

/* styles for light mode */
@media (prefers-color-scheme: light) {
  :root {
    color: var(--cyan);
    background-color: var(--cream);
  }
  a { 
    color: var(--cream);
    text-decoration: none;
    cursor: pointer;
  }
  a:hover {
    color: var(--gold);
    text-decoration: underline;
  }
  button {
    color: var(--jet);
  }
  button:hover {
    border-color: var(--cyan);
  }

  button:focus,
  button:focus-visible {
  outline: 4px auto var(--cyan);
  background-color: rgba(33, 31, 31, 0.191);
  }

  .tutorial {
    background-color: var(--cream);
    color: var(--jet);
  }

  .info {
    background-color: var(--cream);
    color: var(--jet);
  }

  .header {
    background-color: var(--cream);
  }

  .hamburger {
  color: var(--cyan);
}


.menu-link {
  color: var(--cyan);
}

}
 /* styles for the main map element */
.map {
  min-width:auto;
  width: 100%;
  margin: 0 auto;
  height: 50%;
}

/* the tutorial after clicking tutorial link */
.tutorial {
  background-color: var(--cream);
  color: var(--jet);
}

.tutorial-btn {
  background-color: rgba(55, 51, 51, 0.191);
}

.tut-link {
  color: var(--cyan);
}

/* the floating window on home page */
.info {
  background-color: var(--cream);
  color: var(--jet);
  box-shadow: 1px 3px 16px -4px rgba(0,0,0,0.43);
  -webkit-box-shadow: 1px 3px 16px -4px rgba(0,0,0,0.43);
  -moz-box-shadow: 1px 3px 16px -4px rgba(0,0,0,0.43);
}

/* header on home page */
.header {
  background-color: var(--cream);
  border-bottom: solid .1em rgba(0,0,0,0.43);
}
/* search input on home page */
.search {
  background: #FFFFFF;
  box-shadow: 1px 2px 16px -4px rgba(0,0,0,0.43);
  -webkit-box-shadow: 1px 2px 16px -4px rgba(0,0,0,0.43);
  -moz-box-shadow: 1px 2px 16px -4px rgba(0,0,0,0.43);
}
/* location button on home page */
.location-btn {
  color: var(--cream);
  background: var(--cyan);
  box-shadow: 1px 3px 16px -4px rgba(0,0,0,0.43);
  -webkit-box-shadow: 1px 3px 16px -4px rgba(0,0,0,0.43);
  -moz-box-shadow: 1px 3px 16px -4px rgba(0,0,0,0.43);
}

/* hamburger menu */
/* .hamburger {
  color: var(--cyan);
} */

.floating-in {
  position: absolute;
  top: -100px;
  left: 50%;
  display: flex;
  justify-content: space-evenly;
  padding: .25em;
  transform: translateX(-50%);
  animation: floatIn 2s forwards;
}

@keyframes floatIn {
  0% {
    top: -50px;
    opacity: 0;
  }
  100% {
    top: 0px; 
    opacity: 1;
  }
}

/* buttons on the detail page and the float card */

.float-btn {
  background-color: var(--red);
  color: var(--cream);
  box-shadow: 1px 3px 16px -4px rgba(0,0,0,0.43);
  -webkit-box-shadow: 1px 3px 16px -4px rgba(0,0,0,0.43);
  -moz-box-shadow: 1px 3px 16px -4px rgba(0,0,0,0.43);
}

/* details page */

.detail {
  color: var(--jet);
}

.detail-title {
  color: var(--red);
}

.detail-btn {
  border: transparent solid 1px;
  background-color: var(--red);
}

.detail-img {
  max-width: 10em;
  max-height: 5em;
}

.menu-link {
  color: var(--cyan);
}

.resources {
  color: var(--jet);
}

.resources:hover {
  color: gold;
  text-decoration: underline;

}

.re-title {
  color: var(--gold);
}

#search {
  color: var(--jet);
}

